--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,9 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		
+		<div>
+		   <p>moi c'est stéphane kondjodjo; informaticien programmeur, etudiant dans le cour du git hub</p>
+		</div>
 	
 </body></html>
