ajout d'un titre à la description

--- a/hello.html
+++ b/hello.html
@@ -17,9 +17,15 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
-		
+		<!-- ma description-->
 		<div>
+		    <h1> ma description</h1>
 		   <p>moi c'est stéphane kondjodjo; informaticien programmeur, etudiant dans le cour du git hub</p>
+		</div>
+		<!-- ma récopense-->
+		<div>
+		    <h1> ms récompenses</h1>
+		   <p>rn chantier...</p>
 		</div>
 	
 </body></html>
